editing section pages

--- a/service.html
+++ b/service.html
@@ -20,3 +20,11 @@
         </ul>
     </div> <!-- id="nav" -->   
     </div>   <!-- header -->
+ 
+    <body>
+    <!-- title image --> 
+        <h1 class="about"> SERVICE </h1>
+        <div class="backgroundimg"> 
+            <image src="images/Service Page/service_title_image.jpg" /> 
+        </div>   
+    <!--content-->
