consolidated style sheet, worked on positioning

--- a/service.html
+++ b/service.html
@@ -3,12 +3,12 @@
 <html>
     <head> 
         <title> Tufts Catering </title>
-        <link rel="stylesheet" href="Style%20Sheet%20for%20Section%20Pages.css">
+        <link rel="stylesheet" href="Style Sheet.css">
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,900' rel='stylesheet' type='text/css'>
     </head>
     <div class="header"> 
         <div id="horizontal logo"> 
-            <image src="images/logos/Horizontal-Logo.png" alt="Tufts Catering" width="190" height="75" /> 
+        <a href="index.html">  <image src="images/logos/Horizontal-Logo.png" alt="Tufts Catering" width="190" height="75" /> </a>
         </div>
    <div id="nav" class="bar"> 
             <ul> 
@@ -23,7 +23,7 @@
  
     <body>
     <!-- title image --> 
-        <h1 class="about"> SERVICE </h1>
+        <h1 class="sectionpage"> SERVICE </h1>
         <div class="backgroundimg"> 
             <image src="images/Service Page/service_title_image.jpg" /> 
         </div>   
