--- a/about.html
+++ b/about.html
@@ -3,34 +3,35 @@
 <html>
     <head> 
         <title> Tufts Catering </title>
-        <link rel="stylesheet" href="Style%20Sheet%20for%20Section%20Pages.css">
+        <link rel="stylesheet" href="Style%20Sheet.css">
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,900' rel='stylesheet' type='text/css'>
     </head>
     <div class="header"> 
         <div id="horizontal logo"> 
-            <image src="images/logos/Horizontal-Logo.png" alt="Tufts Catering" width="190" height="75" /> 
+            <a href="index.html">  <image src="images/logos/Horizontal-Logo.png" alt="Tufts Catering" width="190" height="75" /> </a>
         </div>
    <div id="nav" class="bar"> 
-            <ul> 
+            <ul class="bar"> 
             <li> <a href="about.html">ABOUT</a> </li>
             <li> <a href="menu.html">MENU</a> </li>
             <li> <a href="service.html">SERVICE</a> </li>
             <li> <a href="order.html">ORDER</a> </li>
             <li> <a href="contact.html">CONTACT</a> </li>                
         </ul>
-    </div> <!-- id="nav" -->   
+    
+    </div>  <!--   id="nav"  -->
     </div>   <!-- header -->
 
     <body>
     <!-- title image --> 
-        <h1 class="about"> ABOUT </h1>
+        <h1 class="sectionpage"> ABOUT </h1>
         <div class="backgroundimg"> 
             <image src="images/About/about_title_image.jpg" /> 
         </div>   
     <!--content-->
         <div class="content" id="fullwidth">
-        <h2> About Tufts Dining </h2>
-        <p> Tufts Catering serves the Tufts community on the Medford/Somerville campus. While faculty and staff are our most frequent customers, alumni, student organizations, parents of students, and other friends of the University may also take advantage of our catering services if they have a room or space booked on the Tufts campus.</p>
+        <h3> About Tufts Dining </h3>
+        <p class="section"> Tufts Catering serves the Tufts community on the Medford/Somerville campus. While faculty and staff are our most frequent customers, alumni, student organizations, parents of students, and other friends of the University may also take advantage of our catering services if they have a room or space booked on the Tufts campus.</p>
 
         <p>We provide catering services for a wide variety of events - from small to large, casual to elegant, for business or pleasure.</p>
         <div id="intextlist" > 
@@ -45,7 +46,7 @@
         </div>
         <p>Please plan in advance if you are having an event related to Matriculation in September and Commencement or Reunions in May, as these are especially popular times of year for catering services.</p>
             
-        <h2> Service Locations </h2>
+        <h3> Service Locations </h3>
         <p> Tufts Catering is administered and licensed to provide services in specific locations on Tufts University's Medford/Somerville campus. We are not able to service events in private homes or in non-university facilities. </p>
         <p> Events requiring delivery off the Medford/Somerville campus proper (the Boathouse, and the Bacow Sailing Pavilion) may require additional charges to cover costs of transportation. </p>
         <div id="intextlist" > 
@@ -55,7 +56,7 @@
             <li>Schedule of Operations</li>
         </ul>
         <p>Tufts Catering has normal operations during the academic year and summer. Please consult with us and plan ahead regarding service during holidays and winter and spring recesses. </p>
-       <h2> Holiday Schedule</h2>
+       <h3> Holiday Schedule</h3>
         <p> Tufts Catering is open for business for most university holidays during the academic year but will be closed during the following holidays: </p>
         <div id="intextlist" > 
         <ul>
@@ -64,8 +65,8 @@ Thanksgiving Day</li>
             <li>Day After Thanksgiving Day</li>
             <li>Christmas Eve</li>
             <li>Christmas Day</li>
-            <li>New Year’s Eve (if granted as a President’s bonus day)</li>
-            <li>New Year’s Day</li>
+            <li>New Year's Eve (if granted as a President’s bonus day)</li>
+            <li>New Year's Day</li>
         </ul>
          </div>
         </div>
